style.css
/* Styles for Tic Tac Toe */
html {
    font-family: 'Montserrat', sans-serif;
    background-color: #090947;
    background-image: linear-gradient(315deg, #090947 0%, #5a585a 74%);
    color: rgb(229, 234, 241);
    padding: 30px 0px 30px 0px;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    
}

h1 {
    color: rgb(118, 228, 209);
    font-size: 60px;
    font-weight: 600;
}

#page1, #page2, #page3 {
    display: flex;
    flex-direction: column;
}

#page1 div, #page2 div, #page3 div {
    align-self: center;
    padding: 20px;
}

.opponent {
    display: flex;
    flex-direction: column;
}

.opponent button, .endgame button {
    font-family: 'Montserrat', sans-serif;
    align-self: center;
    width: 200px;
    height: 70px;
    border-radius: 35px;
	font-size: 16px;
    border: none;
	background-color: rgb(245, 236, 227);
    box-shadow: 0 12px 18px -4px rgb(98, 130, 141);
	cursor: pointer;
}

.opponent button {
        margin: 20px;

}

.opponent button:focus {
    background-color: #081b24c9;
    color: aliceblue;
}


#letsPlayBtn {
	font-family: 'Montserrat', sans-serif;
    align-self: center;
	font-size: 22px;
    width: 330px;
    height: 60px;
    margin: 20px;
    border-radius: 55px;
    border: none;
    box-shadow: 0 12px 18px -4px rgb(98, 130, 141);
	background-color: rgba(168, 250, 236, 0.815);
	cursor: pointer;
}

.logo img {
	border-radius: 105px;
	height: 200px;
}

#page2, #page3 {
	display: none;
}


/* #page2 */

.scoreboard-div, #scoreboard, .X-O {
	display: flex;
}

#turn-msg {
    display: none;
    font-size: 30px;
}

/* #page3 */

#page3 {
    height: 100vh;
}





td {
	border:  5px solid rgb(247, 243, 228);
	text-align:  center;
	cursor: pointer;
}


table {
	border-collapse: collapse;
	width: 500px;
}



table tr:first-child td {
	border-top: 0;
}

table tr:last-child td {
	border-bottom: 0;
}

table tr td:first-child {
	border-left: 0;
}

table tr td:last-child {
	border-right: 0;
}

.endgame {
  display: none;
  width: 300px;
  height: 200px;
  background-color: rgba(238, 189, 99, 0.952);
  text-align: center;
  border-radius: 5px;
  color: rgba(31, 31, 31, 0.877);
  font-weight: 500;
  font-size: 40px;
}

.cell {
    color: #28313b00;
    height: 150px;
    width: 50px;
    background-repeat: no-repeat;
    background-position: center;
    
}

.cell-X {
    background-image: url("https://hmjatt.github.io/Tic_Tac_Toe/images/svgs/X.svg");
    height: 150px;
    width: 50px;
    background-repeat: no-repeat;
    color: #09094700;
}


.cell-O {
    background-image: url("https://hmjatt.github.io/Tic_Tac_Toe/images/svgs/O.svg");
    height: 150px;
    width: 50px;
    color: #09094700;
    background-repeat: no-repeat;
}


@media only screen and (max-device-width: 500px) {

    
    #letsPlayBtn {
        margin: 0px;
    }

    table {
        width: 370px;
    }

    .cell {
        height: 130px;
        width: 80px;
    }
    

    h1 {
        font-size: 50px;
        margin: 0px;
    }

    .XO img{
        height: 100px;
    }

    .logo img {
        height: 140px;
    }

}

@media only screen and (min-device-height: 1200px) {
    html {
        height: 100vh;
    }
}

